force-app/main/default/objects/Property__c/fields/Castle__c.field-meta.xml
<CustomField>
    <fullName>Castle__c</fullName>
    <description>The castle in which the building resides.</description>
    <label>Castle</label>
    <referenceTo>Castle__c</referenceTo>
    <relationshipName>Buildings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>