force-app/main/default/objects/Property__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>The street address of the property</description>
    <inlineHelpText>This is the street address of the property. Do not use a PO Box.</inlineHelpText>
    <label>Street Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>