force-app/main/default/objects/Property__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Keep</fullName>
            </value>
            <value>
                <fullName>Bailey</fullName>
            </value>
            <value>
                <fullName>Chapel</fullName>
            </value>
            <value>
                <fullName>Stables</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Other Building</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
            <value>
                <fullName>Tower</fullName>
            </value>
            <value>
                <fullName>Gate</fullName>
            </value>
            <value>
                <fullName>Moat</fullName>
            </value>
            <value>
                <fullName>Drawbridge</fullName>
            </value>
            <value>
                <fullName>Portcullis</fullName>
            </value>
            <value>
                <fullName>Other Fortification</fullName>
            </value>
            <value>
                <fullName>Battlement</fullName>
            </value>
            <value>
                <fullName>Garrison</fullName>
            </value>
            <value>
                <fullName>Chambers</fullName>
            </value>
            <value>
                <fullName>Dungeon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>