force-app/main/default/objects/Property__c/recordTypes/Fortification.recordType-meta.xml
<RecordType>
    <fullName>Fortification</fullName>
    <active>true</active>
    <description>A defensive emplacement within the castle.</description>
    <label>Fortification</label>
</RecordType>